Display more user info
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@450 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/res/layout/item_order.xml
+++ b/res/layout/item_order.xml
@@ -49,6 +49,12 @@
                        android:textStyle="bold" />
                </LinearLayout>
 
+               <TextView
+                   android:id="@+id/item_description"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:textAppearance="?android:attr/textAppearanceSmall" />
+
                <LinearLayout
                    android:id="@+id/item_order_description_field"
                    android:layout_width="match_parent"
