--- a/res/layout/menu_item.xml
+++ b/res/layout/menu_item.xml
@@ -43,6 +43,13 @@
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/item_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Small Text"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
     <LinearLayout
         android:id="@+id/item_order_description_field"
         android:layout_width="match_parent"
