Display more user info
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@452 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/res/layout/user_item.xml
+++ b/res/layout/user_item.xml
@@ -47,7 +47,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                    android:text="20&apos;s / F / Straight / Single"
+                    android:text="- / - / -"
                     android:textAppearance="?android:attr/textAppearanceSmall" />
             </LinearLayout>
 
@@ -71,7 +71,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                    android:text="Friends/Singles"
+                    android:text="-"
                     android:textAppearance="?android:attr/textAppearanceSmall" />
             </LinearLayout>
 
