--- a/res/layout/user_profile_dialog.xml
+++ b/res/layout/user_profile_dialog.xml
@@ -56,7 +56,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                            android:text="20&apos;s / F / Straight / Single"
+                            android:text="- / - / -"
                             android:textAppearance="?android:attr/textAppearanceSmall" />
                     </LinearLayout>
 
@@ -80,7 +80,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                            android:text="Friends/Singles"
+                            android:text="-"
                             android:textAppearance="?android:attr/textAppearanceSmall" />
                     </LinearLayout>
 
@@ -165,7 +165,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/activity_vertical_margin"
                 android:padding="@dimen/activity_vertical_margin"
-                android:text="I like long walks on the beach and dirty martinis, but you can start by buying me a drink. "
                 android:textAppearance="?android:attr/textAppearanceMedium" />
         </LinearLayout>
 
