Don't show items with zero price and don't let them be added to the order.
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@453 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/res/layout/menu_item.xml
+++ b/res/layout/menu_item.xml
@@ -20,7 +20,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/TextView02"
+            android:id="@+id/view_order_currency"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:layout_gravity="top"
@@ -47,7 +47,6 @@
         android:id="@+id/item_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Small Text"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <LinearLayout
@@ -94,7 +93,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:text="Extra drity"
+            android:text="Extra dirty"
             android:textAppearance="?android:attr/textAppearanceSmall" />
     </LinearLayout>
 
