--- a/res/layout/item_order.xml
+++ b/res/layout/item_order.xml
@@ -30,6 +30,7 @@
                        android:textSize="16sp" />
 
                    <TextView
+                       android:id="@+id/view_order_currency"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:gravity="center_vertical"
