--- a/res/layout/order_dialog.xml
+++ b/res/layout/order_dialog.xml
@@ -22,8 +22,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:clickable="true"
-                android:scaleType="centerCrop"
-                android:src="@drawable/profile" />
+                android:scaleType="centerCrop" />
 
             <TextView
                 android:id="@+id/textView2"
@@ -67,7 +66,8 @@
     <ListView
         android:id="@+id/item_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/activity_vertical_margin" >
 
     </ListView>
 
