--- a/res/layout/open_orders_item.xml
+++ b/res/layout/open_orders_item.xml
@@ -58,6 +58,7 @@
                         android:background="@android:color/background_dark"
                         android:divider="?android:dividerHorizontal"
                         android:orientation="vertical"
+                        android:padding="@dimen/activity_vertical_margin"
                         android:showDividers="middle" >
 
                         <LinearLayout
