--- a/res/layout/init_main.xml
+++ b/res/layout/init_main.xml
@@ -110,8 +110,15 @@
             android:gravity="left|center_vertical"
             android:text="Sign in with Google"
             android:textAppearance="?android:attr/textAppearanceLargeInverse" />
-
-        <Button
+       <!--  <com.facebook.widget.LoginButton
+            android:id="@+id/login_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="30dp" /> -->
+    
+        <com.facebook.widget.LoginButton 
             android:id="@+id/view_init_facebook"
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="fill_parent"
@@ -121,7 +128,7 @@
             android:gravity="left|center_vertical"
             android:text="Sign in with Facebook"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:visibility="gone" />
+            android:visibility="visible" /> 
 
         <Button
             android:id="@+id/view_init_toggle_sign_up"
