--- a/res/layout/people_tab.xml
+++ b/res/layout/people_tab.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android1="http://schemas.android.com/apk/res/android"
-    android:id="@+id/people_list"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android1:layout_marginBottom="1dp" >
+    android:layout_height="wrap_content" >
 
+    <LinearLayout
+        android:id="@+id/people_list"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android1:layout_marginBottom="1dp" >
+    </LinearLayout>
 
-</LinearLayout>
+</ScrollView>
