--- a/res/layout/init_main.xml
+++ b/res/layout/init_main.xml
@@ -111,7 +111,7 @@
             android:text="Sign in with Google"
             android:textAppearance="?android:attr/textAppearanceLargeInverse" />
 
-        <Button
+        <com.facebook.widget.LoginButton 
             android:id="@+id/view_init_facebook"
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="fill_parent"
@@ -121,7 +121,7 @@
             android:gravity="left|center_vertical"
             android:text="Sign in with Facebook"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:visibility="gone" />
+            android:visibility="visible" />
 
         <Button
             android:id="@+id/view_init_toggle_sign_up"
