--- a/res/layout/user_profile_dialog.xml
+++ b/res/layout/user_profile_dialog.xml
@@ -155,6 +155,31 @@
                             android:text="You chatted"
                             android:textAppearance="?android:attr/textAppearanceSmall" />
                     </LinearLayout>
+                    <LinearLayout
+                			android:id="@+id/user_facebook_field"
+               				android:layout_width="match_parent"
+                			android:layout_height="wrap_content"
+                			android:layout_weight="2"
+                			android:visibility="gone" >
+
+                  	<ImageView
+                    		android:id="@+id/ImageView01"
+                    		android:layout_width="15dp"
+                    		android:layout_height="15dp"
+                    		android:layout_gravity="center_vertical"
+                    		android:scaleType="centerInside"
+                    		android:src="@drawable/facebook_icon" />
+
+                	<TextView
+                    		android:id="@+id/user_facebook_text"
+                    		android:layout_width="wrap_content"
+                    		android:layout_height="wrap_content"
+                    		android:layout_gravity="center_vertical"
+                    		android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    		android:text="You&apos;re friends on Facebook"
+                    		android:textAppearance="?android:attr/textAppearanceSmall" />
+
+            </LinearLayout>
                 </LinearLayout>
 
             </LinearLayout>
