Enhancements of the chat screen
git-svn-id: http://192.168.2.90/svn/Bartsy-Andriod/Bartsy@496 c3b44e55-a100-42f6-9c86-32dbf579054b

--- a/res/layout/messages_main.xml
+++ b/res/layout/messages_main.xml
@@ -21,17 +21,29 @@
 					     android:layout_height="wrap_content"/>
 		       </com.vendsy.bartsy.ResponsiveScrollView>
 			</LinearLayout>
-		    <LinearLayout android:layout_width="match_parent" 
-		        android:layout_height="wrap_content">
-		        <EditText android:id="@+id/messageTextBox"
+
+		    <LinearLayout
+		        android:layout_width="match_parent"
+		        android:layout_height="wrap_content"
+		        android:layout_marginTop="@dimen/activity_vertical_margin" >
+
+		        <EditText
+		            android:id="@+id/messageTextBox"
+		            android:layout_width="0dp"
+		            android:layout_height="wrap_content"
+		            android:layout_gravity="bottom"
 		            android:layout_weight="2"
-		            android:layout_width="match_parent"
-		            android:layout_height="wrap_content"/>
-		        <Button android:id="@+id/sendButton" 
-		            android:layout_weight="2"
-		            android:layout_width="200dp"
-		            android:layout_height="wrap_content" 
-		            android:text="Send"/>
+		            android:ems="10" />
+
+		        <Button
+		            android:id="@+id/sendButton"
+		            style="?android:attr/borderlessButtonStyle"
+		            android:layout_width="70dp"
+		            android:layout_height="40dp"
+		            android:drawableTop="@drawable/send_arrow"
+		            android:paddingLeft="7dp"
+		            android:paddingTop="7dp" />
+
 		    </LinearLayout>
 		    
 </LinearLayout>
