--- a/res/layout/message_self_view.xml
+++ b/res/layout/message_self_view.xml
@@ -15,18 +15,22 @@
 	        android:orientation="vertical"
 	        android:gravity="right">
 	     </LinearLayout>
-	     <TextView android:id="@+id/messages_list_date"
+
+	     <TextView
+	         android:id="@+id/messages_list_date"
 	         android:layout_width="wrap_content"
 	         android:layout_height="wrap_content"
-	         android:textColor="#A9E2F3"
-	         android:gravity="right"/>
+	         android:gravity="right"
+	         android:textColor="#888888" />
+
      </LinearLayout>
 
 	 <ImageView
-            android:id="@+id/view_user_list_image_resource"
-            android:src="@drawable/profile"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:scaleType="fitCenter" />
+	     android:id="@+id/view_user_list_image_resource"
+	     android:layout_width="70dp"
+	     android:layout_height="70dp"
+	     android:layout_marginLeft="@dimen/activity_horizontal_margin"
+	     android:scaleType="fitCenter"
+	     android:src="@drawable/profile" />
 	 
 </LinearLayout>
