--- a/res/layout/message_view.xml
+++ b/res/layout/message_view.xml
@@ -2,26 +2,35 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
 	 <ImageView
-            android:id="@+id/view_user_list_image_resource"
-            android:src="@drawable/profile"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:scaleType="fitCenter" />
+	     android:id="@+id/view_user_list_image_resource"
+	     android:layout_width="70dp"
+	     android:layout_height="70dp"
+	     android:layout_marginRight="@dimen/activity_horizontal_margin"
+	     android:scaleType="fitCenter"
+	     android:src="@drawable/profile" />
+
 	 <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+	     android:layout_width="match_parent"
+	     android:layout_height="wrap_content"
+	     android:layout_marginLeft="@dimen/activity_horizontal_margin"
+	     android:orientation="vertical" >
+
 	     <LinearLayout android:id="@+id/messages_list"
 	        android:layout_width="match_parent"
 	        
 	        android:layout_height="wrap_content"
 	        android:orientation="vertical">
 	     </LinearLayout>
-	     <TextView android:id="@+id/messages_list_date"
+
+	     <TextView
+	         android:id="@+id/messages_list_date"
 	         android:layout_width="wrap_content"
 	         android:layout_height="wrap_content"
-	         android:textColor="#A9E2F3"/>
+	         android:textColor="#888888"
+	         android:textSize="12sp" />
+
      </LinearLayout>
 
 </LinearLayout>
